# python_to_typescript

./: LICENSE  README.md  pyproject.toml
src/python_to_typescript/: base.py
tests/: test_generate_typescript.py
tests/test_python_to_typescript/: db.sqlite3  manage.py  run_command.cmd
tests/test_python_to_typescript/test1/: models.py
tests/test_python_to_typescript/test_python_to_typescript/: asgi.py  settings.py  urls.py  wsgi.py
