[project]
name = "my_tools"
version = "0.0.1"
authors = [
  { name="AGBALENYO Komi Barthélémy Elvis", email="author@example.com" },
]
description = "A package of the tools I use the most"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"